# asteroids

./: .gitignore  README.md  asteroid.py  asteroidfield.py  bomb.py  circleshape.py  constants.py  logger.py  main.py  particles.py  player.py  powerups.py  pyproject.toml  shot.py
core/: events.py  game_state.py
entities/: asteroid.py  bomb.py  circleshape.py  player.py  powerups.py  shot.py
systems/: asteroidfield.py  components.py  factory.py  spatial_grid.py
utils/: logger.py  particles.py
